Set minor version, NEWS entries, rename D to W and rebuild README.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fca
 Title: Floating Catchment Area (FCA) Methods to Calculate Spatial Accessibility
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     c(person(given = "Etienne",
            family = "Grueebler",
@@ -10,7 +10,10 @@ Authors@R:
              family = "Unterfinger",
              role = "ctb",
              comment = c(ORCID = "0000-0003-2020-2366")))
-Description: Perform various floating catchment area methods to calculate a spatial accessibility index (SPAI) for demand point data. The distance matrix used for weighting is normalized in a preprocessing step using common functions (gaussian, gravity, exponential or logistic).
+Description: Perform various floating catchment area methods to calculate a
+    spatial accessibility index (SPAI) for demand point data. The distance
+    matrix used for weighting is normalized in a preprocessing step using
+    common functions (gaussian, gravity, exponential or logistic).
 License: GPL (>= 3)
 URL: https://egrueebler.github.io/fca/, https://github.com/egrueebler/fca/
 BugReports: https://github.com/egrueebler/fca/issues/
