--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "package@etienne.app"),
       person(given = "Merlin",
              family = "Unterfinger",
-             role = "ctb",
+             role = "aut",
              comment = c(ORCID = "0000-0003-2020-2366")))
 Description: Perform various floating catchment area methods to calculate a
     spatial accessibility index (SPAI) for demand point data. The distance
